# z-UERANSIM-W-AGF

./: CMakeLists.txt  Diagram Tanpa Judul.drawio  Diagram of code.drawio  README.md  makefile
config/: CU.yaml  W-AGF.yaml  open5gs-CU.yaml  open5gs-DU.yaml  open5gs-gnb.yaml  w-agf.yaml
src/: CU.cpp  DU.cpp  ue.cpp  w-agf.cpp
src/CU/: CMakeLists.txt  CU.cpp  CU.hpp  nts.cpp  nts.hpp  types.cpp  types.hpp
src/CU/app/: cmd_handler.cpp  cmd_handler.hpp  task.cpp  task.hpp
src/CU/f1ap/: encode.cpp  interface copy.cpp  interface.cpp  management.cpp  rrchandling.cpp  sctp_task.cpp  sctp_task.hpp  task.cpp  task.hpp  transport.cpp  utils.hpp
src/CU/gtp/: proto.cpp  proto.hpp  task.cpp  task.hpp  utils.cpp  utils.hpp
src/CU/ngap/: context.cpp  encode.cpp  encode.hpp  management.cpp  nas.cpp  nnsf.cpp  radio.cpp  session.cpp  task.cpp  task.hpp  transport.cpp  utils.cpp  utils.hpp
src/CU/rrc/: broadcast.cpp  channel.cpp  connection.cpp  handler.cpp  management.cpp  sap.cpp  task.cpp  task.hpp  ues.cpp
src/CU/sctp/: task.cpp  task.hpp
src/CU/sctpServer/: sctp_task.cpp  sctp_task.hpp
src/DU/: CMakeLists.txt  DU.cpp  DU.hpp  nts.hpp  types.cpp  types.hpp
src/DU/app/: cmd_handler.cpp  cmd_handler.hpp  task.cpp
src/DU/f1ap/: encode.cpp  encode.hpp  interface.cpp  task.cpp  task.hpp  transport.cpp  utils.hpp
src/DU/rls/: ctl_task.cpp  ctl_task.hpp  task.hpp  udp_task.cpp
src/DU/rrc/: broadcast.cpp  channel.cpp  management.cpp  sap.cpp  task.cpp  task.hpp
src/DU/sctp/: task.cpp  task.hpp
src/asn/asn1c/: UTF8String.c  VisibleString.c
src/asn/f1ap/: ANY.c  AbortTransmission.c  AbortTransmission.h  AccessAndMobilityIndication.c  AccessAndMobilityIndication.h  AccessPointPosition.c  AccessPointPosition.h  AccessSuccess.c  AccessSuccess.h  Activated-Cells-to-be-Updated-List-Item.c  Activated-Cells-to-be-Updated-List-Item.h  Activated-Cells-to-be-Updated-List.c  Activated-Cells-to-be-Updated-List.h  ActiveULBWP.c  ActiveULBWP.h  AdditionalDuplicationIndication.c  AdditionalDuplicationIndication.h  AdditionalPDCPDuplicationTNL-Item.c  AdditionalPDCPDuplicationTNL-Item.h  AdditionalPDCPDuplicationTNL-List.c  AdditionalPDCPDuplicationTNL-List.h  AdditionalPath-Item.c  AdditionalPath-Item.h  AdditionalPath-List.c  AdditionalPath-List.h  AdditionalRRMPriorityIndex.c  AdditionalRRMPriorityIndex.h  AdditionalSIBMessageList-Item.c  AdditionalSIBMessageList-Item.h  AdditionalSIBMessageList.c  AdditionalSIBMessageList.h  AggressorCellList-Item.c  AggressorCellList-Item.h  AggressorCellList.c  AggressorCellList.h  AggressorgNBSetID.c  AggressorgNBSetID.h  AllocationAndRetentionPriority.c  AllocationAndRetentionPriority.h  AlternativeQoSParaSetItem.c  (+1889 more)
src/asn/ngap/: ASN_NGAP_ProcedureCode.h  ASN_NGAP_ProtocolIE-Field.c  ASN_NGAP_ProtocolIE-Field.h  ASN_NGAP_ProtocolIE-ID.h
src/lib/: CMakeLists.txt
src/lib/app/: cli_cmd.cpp  cli_cmd.hpp  monitor.hpp  ue_ctl.hpp
src/lib/asn/: f1ap.cpp  f1ap.hpp  f1ap_msg.hpp
src/lib/rls/: rls_pdu.cpp
src/lib/sctp/: internal.cpp  internal.hpp  server.cpp  server.hpp  types.hpp
src/ue/: nts.cpp  nts.hpp  types.cpp  types.hpp  ue.cpp  ue.hpp
src/ue/app/: cmd_handler.cpp  cmd_handler.hpp  task.cpp  task.hpp
src/ue/nas/: enc.cpp  keys.cpp  keys.hpp  storage.cpp  storage.hpp  task.cpp
src/ue/nas/mm/: access.cpp  auth.cpp  base.cpp  messaging.cpp  mm.hpp  proc.cpp  radio.cpp  register.cpp  sap.cpp  security.cpp  service.cpp  slice.cpp  timer.cpp  transport.cpp
src/ue/nas/sm/: allocation.cpp  base.cpp  establishment.cpp  procedure.cpp  release.cpp  resource.cpp  sap.cpp  sm.hpp  timer.cpp  transport.cpp
src/ue/nas/usim/: sqn_mng.cpp  sqn_mng.hpp  usim.cpp  usim.hpp
src/ue/rls/: ctl_task.cpp  ctl_task.hpp  task.cpp  task.hpp  udp_task.cpp  udp_task.hpp
src/ue/rrc/: access.cpp  cells.cpp  channel.cpp  connection.cpp  failures.cpp  handler.cpp  idle.cpp  nas.cpp  sap.cpp  state.cpp  sysinfo.cpp  task.cpp  task.hpp
src/ue/tun/: config.cpp  config.hpp  task.cpp  task.hpp  tun.cpp  tun.hpp
src/utils/: common_types.hpp  nts.hpp  octet.hpp  octet_string.cpp  octet_string.hpp
src/w-agf/: CMakeLists.txt  CMakeLists.txt.save  nts.cpp  nts.hpp  types.cpp  types.hpp  w-agf.cpp  w-agf.hpp
src/w-agf/app/: cmd_handler.cpp  cmd_handler.hpp  task.cpp  task.hpp
src/w-agf/f1ap/: encode.cpp  interface.cpp  management.cpp  task.cpp  task.hpp  transport.cpp  utils.cpp
src/w-agf/nas/: enc.hpp  task.hpp
src/w-agf/nas/mm/: config.cpp  dereg.cpp  ecall.cpp  identity.cpp  radio.cpp  register.cpp
src/w-agf/nas/sm/: allocation.cpp  base.cpp  release.cpp  sap.cpp  timer.cpp  transport.cpp
src/w-agf/nas/usim/: sqn_mng.hpp  usim.cpp
src/w-agf/rls/: ctl_task.cpp  ctl_task.hpp  task.cpp  task.hpp  udp_task.cpp  udp_task.hpp
src/w-agf/rrc/: broadcast.cpp  channel.cpp  connection.cpp  handler.cpp  management.cpp  sap.cpp  task.cpp  task.hpp
src/w-agf/sctp/: task.cpp  task.hpp
src/w-agf/tun/: config.cpp  config.hpp  task.hpp  tun.cpp
tools/: E-CID-MeasurementPeriodicity.c  E-CID-MeasurementPeriodicity.h  PosMeasurementPeriodicity.h  f1ap-16.8.0.asn1  f1ap_msg.hpp
